<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="76dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_about_app_description_1"
        android:layout_marginTop="@dimen/act_about_standard_distance"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_about_app_description_2"
        android:layout_marginTop="@dimen/act_about_standard_distance"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_about_app_description_3"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="@dimen/act_about_standard_distance"
        android:id="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_about_app_description_4"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/act_about_standard_distance"
        android:id="@+id/textView5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_about_app_description_5"
        android:layout_below="@+id/textView5"
        android:layout_alignEnd="@+id/textView3"
        android:layout_marginTop="@dimen/act_about_standard_distance" />

</RelativeLayout>